updates model documentation

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -33,3 +33,18 @@
 	url = {http://dx.doi.org/10.1371/journal.pone.0259166},
 	note = {Place: Santa Monica, CA}
 }
+
+@article{soller2022,
+	title = {Modeling infection from SARS-CoV-2 wastewater concentrations: promise, limitations, and future directions},
+	author = {Soller, Jeffrey and Jennings, Wiley and Schoen, Mary and Boehm, Alexandria and Wigginton, Krista and Gonzalez, Raul and Graham, Katherine E and McBride, Graham and Kirby, Amy and Mattioli, Mia and Environmental, Soller and St, King},
+	langid = {en}
+}
+
+@article{zhu2021,
+	title = {Early warning of COVID-19 via wastewater-based epidemiology: potential and bottlenecks},
+	author = {Zhu, Yifan},
+	year = {2021},
+	date = {2021},
+	journal = {Science of the Total Environment},
+	langid = {en}
+}
