--- a/paper/manuscript.qmd
+++ b/paper/manuscript.qmd
@@ -69,15 +69,15 @@ We start with a standard disease transmission model describing person-to-person 
 
 $$ 
 \begin{align}
-\dot{\mathbf{S}} &=\ - \boldsymbol{\lambda}_t \odot \mathbf{S} + p_S \mathbf{m}_S \\
-\dot{\mathbf{E}} &=\ \boldsymbol{\lambda}_t \odot \mathbf{S} - \sigma \mathbf{E} + p_E \mathbf{m}_E \\
-\dot{\mathbf{P}} &=\ \sigma \mathbf{E} - \delta \mathbf{P} + p_P \mathbf{m}_P \\
-\dot{\mathbf{I}} &=\ \delta \mathbf{P} - \gamma \mathbf{I} + p_I \mathbf{m}_I \\
-\dot{\mathbf{R}} &=\ \gamma \mathbf{I} + p_R \mathbf{m}_R \\
+\dot{\mathbf{S}} &=\ - \boldsymbol{\lambda}_t \odot \mathbf{S} + \mathbf{m}_S \\
+\dot{\mathbf{E}} &=\ \boldsymbol{\lambda}_t \odot \mathbf{S} - \sigma \mathbf{E} + \mathbf{m}_E \\
+\dot{\mathbf{P}} &=\ \sigma \mathbf{E} - \delta \mathbf{P} + \mathbf{m}_P \\
+\dot{\mathbf{I}} &=\ \delta \mathbf{P} - \gamma \mathbf{I} + \mathbf{m}_I \\
+\dot{\mathbf{R}} &=\ \gamma \mathbf{I} + \mathbf{m}_R \\
 \end{align}
 $$ {#eq-ode1}
 
-where $\dot{\mathbf{S}}, \dot{\mathbf{E}}, \dot{\mathbf{P}}, \dot{\mathbf{I}}, \dot{\mathbf{R}}$ represent the time derivatives of each disease status, greek letters represent progression rates and $p_x\mathbf{m}_x$ terms represent migration flows $\mathbf{m}_x$ modulated by propensity to travel $p_x$ at disease state $x \in \{S, E, P, I, R\}$.
+where $\dot{\mathbf{S}}, \dot{\mathbf{E}}, \dot{\mathbf{P}}, \dot{\mathbf{I}}, \dot{\mathbf{R}}$ represent the time derivatives of each disease status, greek letters represent progression rates and $\mathbf{m}_x$ terms represent net travel flows $\mathbf{m}_x$ at disease state $x \in \{S, E, P, I, R\}$.
 
 Force of infection $\boldsymbol{\lambda}_t$ is computed using a time-varying effective contact-rate vector $\boldsymbol{\beta}_t$ which will depend on contact rates within each strata as well as nonpharmaceutical interventions (discussed later). Infectiousness of each disease status $\mathbf{P}$ and $\mathbf{I}$ are modulated by constants $c_p$ and $c_i$.
 
@@ -85,12 +85,43 @@ $$
 \boldsymbol{\lambda}_t = \boldsymbol{\beta}_t (c_p\mathbf{P}_t + c_i\mathbf{I}_t)
 $$ {#eq-force-inf}
 
-<!--
 ### Discrete-time stochastic implementation
 
-The model described above is implemented as a discrete-time stochastic model using the following approach. We simulate outflows for each disease state vector $\mathbf{X}$ using a stochastic  $\mathbf{X_t} = \mathbf{X_{t-1}} \sim Binomial(\mathbf{X}, 1-exp(\mathbf{p}))$ hence.
+We implement the model as a discrete-time stochastic model using the following approach. We simulate outflows for each disease state vector $\mathbf{X}$ using drawing from a binomial distributions $\mathbf{out_{X_t}} \sim Binomial(\mathbf{X}, 1-exp(\mathbf{p}))$. We then carry over outflows from one disease state to the next. Hence, our disease state equations can be re-written as 
 
--->
+$$ 
+\begin{align}
+\mathbf{S_t} &\sim \mathbf{S_{t-1}} 
+                    -B(\mathbf{S_{t-1}},1-\exp(-\boldsymbol{\lambda}_{t-1}/\mathbf{N}))
+                      + \mathbf{m_S} \\
+\mathbf{E_t} &\sim \mathbf{E_{t-1}} 
+                    +B(\mathbf{S_{t-1}},1-\exp(-\boldsymbol{\lambda}_{t-1}/\mathbf{N}))
+                    -B(E_{t-1},1-\exp(-\sigma)) 
+                    +\mathbf{m_E}\\
+\mathbf{P_t} &\sim \mathbf{P_{t-1}}
+                    +B(E_{t-1},1-\exp(-\sigma))
+                    -B(P_{t-1},1-\exp(-\delta)) +
+                    \mathbf{m_P}\\
+\mathbf{I_t} &\sim \mathbf{I_{t-1}}
+                    +B(P_{t-1},1-\exp(-\delta))
+                    -B(I_{t-1},1-\exp(-\gamma)) +
+                    \mathbf{m_I}\\
+\mathbf{R_t} &\sim \mathbf{R_{t-1}}
+                    -B(I_{t-1},1-\exp(-\gamma)) +
+                    \mathbf{m_R}
+\end{align}
+$$ {#eq-stochastic}
+
+where $B(\mathbf{n},p)$ results in a binomial draw from population vector $n$ with probability $p$. The model simulates outflows and inflows such that the outflows from one disease state are the same as the inflows to a different state.
+
+### Travel
+
+Stochastic travel flows are modeled as follows. Mobility matrix $\mathbf{A}$ is an $n \times n$ matrix where $a_{ij}$ represent daily travel rates from jurisdiction $i$ to $j$ and $a_{i=j}$ is the probability of no travel. Travel between jurisdictions is modeled using multinomial draws for each source jurisdiction $i$:
+
+$$
+\mathbf{X'_{td}} \sim \sum_{j}{Multinom(\mathbf{X_{t-1}}, A_i )} \ \forall \ d \in \{S, E, P, I, R\}
+$$ {#eq-travel}
+where $\mathbf{X'_{td}}$ are disease state vectors after travel. Once travel is computed in the model, we back out net travel flows as $\mathbf{m_d} = \mathbf{X'_{td}} - \mathbf{X_{td}}$ and use those in @eq-stochastic. This formulation implies that travel is simulated before disease transitions *within* each time step.
 
 ### Nonpharmaceutical interventions {#npi}
 
@@ -103,16 +134,15 @@ $$ {#eq-betat}
 and the intervention level $\mathbf{l}_t$ is a jurisdiction-dependent nonpharmaceutical intervention level. $\mathbf{l}_t$ can be either specified as an exogenous variable or an endogenous variable controlled by local public health departments. Public health decision-makers follow epidemiological outcomes that are proportional to $\mathbf{I_t}$ (such as case counts) to decide the appropriate level of intervention. Thus, we specify a target NPI level $\mathbf{l}_t^*$ as a linear function of disease prevalence.
 
 $$ 
-\mathbf{L}_t^* = \min{(cI, l_{max})}
+\mathbf{L}_t^* = \min{(cI_{t-\Delta}, l_{max})}
 $$ {#eq-targetnpi}
-
-This formulation approximates phased mitigation plans adopted during the COVID-19 pandemic, where policymakers introduce or remove interventions depending on disease prevalence or other severity indicators. While public health decision-makers strive to use up-to-date information to introduce and remove NPIs, they do not have perfect and instantaneous information on disease prevalence; hence actual policy behaviors lag epidemiological indicators. In continuous time, we represent this process with a stock vector $\mathbf{L}$ representing the NPI level in effect
+where $\Delta$ is the delay imposed by the surveillance method used to monitor the disease. This formulation approximates phased mitigation plans adopted during the COVID-19 pandemic, where policymakers introduce or remove interventions depending on disease prevalence or other severity indicators. While public health decision-makers strive to use up-to-date information to introduce and remove NPIs, they do not have perfect and instantaneous information on disease prevalence; hence actual policy behaviors lag epidemiological indicators. In continuous time, we represent this process with a stock vector $\mathbf{L}$ representing the NPI level in effect
 
 $$ 
 \dot{\mathbf{L}} = \frac{1}{a}(\mathbf{l}_t^*-\mathbf{L})
 $$ {#eq-actualnpi}
 
-where $a$ represents the adjustment time for NPIs (i.e., one or two weeks) using conventional measures.
+where $a$ represents the adjustment time for NPIs for decision making reasons, whereas $\Delta$ represents the lag imposed by surveillance methods.
 
 ## Cost of interventions
 
